--- a/juego.html
+++ b/juego.html
@@ -94,12 +94,12 @@
   <section id="p3">
     <p><strong>4-¿Que significa el nombre de Este sitio web?</strong></p>
   <label>
-    <input type="radio" value="1" name="p3" onclick="respuesta(3,this)"> ARTE-COLORES Y MUSICA.
+    <input type="radio" value="1" name="p3" onclick="respuesta(3,this)"> UFC: UN NUEVO MUNDO.
   </label>
   <label>
-    <input type="radio" value="2" name="p3" onclick="respuesta(3,this)"> ARTE- SONIDO Y MUJERES.
+    <input type="radio" value="2" name="p3" onclick="respuesta(3,this)"> UMS: EL OTRO LADO.
   </label> <label>
-    <input type="radio" value="3" name="p3" onclick="respuesta(3,this)">ARTE- ESPIRITU Y MUJERES.
+    <input type="radio" value="3" name="p3" onclick="respuesta(3,this)">UNM: UN NUEVO MUNDO- EL OTRO LADO.
   </label>
   </section>
 
